Created index file

--- a/nhlindex.html
+++ b/nhlindex.html
@@ -16,7 +16,7 @@
       <a class="navbar-brand" style="font-size: 20px; padding-left: 20px">Today in Sports</a>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav" style="font-size: 20px;">
-          <a class="nav-link active" href="mlbindex.html" style="padding-left: 40px;">
+          <a class="nav-link active" href="index.html" style="padding-left: 40px;">
             <img src="Images/baseball.png" alt="" width="30" height="30" class="d-inline-block align-text-middle">  MLB</a>
         <a class="nav-link active" href="nhlindex.html" style="padding-left: 40px;">
             <img src="Images/puck.png" alt="" width="30" height="30" class="d-inline-block align-text-middle">  NHL</a>
