--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="refresh" content="60"/>
   <title>NHL</title>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  <script src="mlbscript.js"></script>
+  <script src="script.js"></script>
   <script src="lib/moment/moment.min.js"></script>
-  <link rel="stylesheet" href="./mlbstyle.css"> 
+  <link rel="stylesheet" href="./style.css"> 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
   <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: -5px;">
@@ -16,7 +16,7 @@
       <a class="navbar-brand" style="font-size: 20px; padding-left: 20px">Today in Sports</a>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav" style="font-size: 20px;">
-          <a class="nav-link active" href="mlbindex.html" style="padding-left: 40px;">
+          <a class="nav-link active" href="index.html" style="padding-left: 40px;">
                 <img src="Images/baseball.png" alt="" width="30" height="30" class="d-inline-block align-text-middle">  MLB</a>
             <a class="nav-link active" href="nhlindex.html" style="padding-left: 40px;">
                 <img src="Images/puck.png" alt="" width="30" height="30" class="d-inline-block align-text-middle">  NHL</a>
