Fixed navbar bug

--- a/nhlindex.html
+++ b/nhlindex.html
@@ -13,17 +13,15 @@
   
   <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: -5px;">
     <div class="container-fluid">
-      <a class="navbar-brand" style="font-size: 20px; padding-left: 20px">Today in Sports</a>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <a class="navbar-brand abs" style="font-size: 20px; padding-left: 20px">Today in Sports</a>
         <div class="navbar-nav" style="font-size: 20px;">
-          <a class="nav-link active" href="index.html" style="padding-left: 40px;">
-            <img src="Images/baseball.png" alt="" width="30" height="30" class="d-inline-block align-text-middle">  MLB</a>
-        <a class="nav-link active" href="nhlindex.html" style="padding-left: 40px;">
-            <img src="Images/puck.png" alt="" width="30" height="30" class="d-inline-block align-text-middle">  NHL</a>
+          <a class="nav-link active" href="index.html" style="padding-left: 20px">
+                <img src="Images/baseball.png" alt="" width="30" height="30">  MLB</a>
+            <a class="nav-link active" href="nhlindex.html">
+                <img src="Images/puck.png" alt="" width="30" height="30">  NHL</a>
         </div>
-    </div>
-    <span id="date" style="color: white; font-size: 20px; padding-right: 50px;"></span>
-    <span id="time" style="color: white; font-size: 20px; padding-right: 20px;"></span>
+    <span id="date" class="navbar-nav mx-auto" style="color: white; font-size: 20px;"></span>
+    <span id="time" class="ms-auto" style="color: white; font-size: 20px; padding-right: 20px;"></span>
   </nav>
   
 </head>
