--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   <link rel="stylesheet" href="./style.css"> 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
-  <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: -5px;">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand abs" style="font-size: 20px; padding-left: 20px">Today in Sports</a>
-        <div class="navbar-nav" style="font-size: 20px;">
-          <a class="nav-link active" href="index.html" style="padding-left: 20px">
+      <a class="navbar-brand abs" style="font-size: 20px;">Today in Sports</a>
+          <a class="nav-link active" href="index.html" style="font-size: 20px; color: white;">
                 <img src="Images/baseball.png" alt="" width="30" height="30">  MLB</a>
-            <a class="nav-link active" href="nhlindex.html">
-                <img src="Images/puck.png" alt="" width="30" height="30">  NHL</a>
-        </div>
-    <span id="date" class="navbar-nav mx-auto" style="color: white; font-size: 20px;"></span>
-    <span id="time" class="ms-auto" style="color: white; font-size: 20px; padding-right: 20px;"></span>
+            <a class="nav-link active" href="nhlindex.html" style="font-size: 20px;  color: white; padding-left: 20px;">
+                <img src="Images/puck.png" alt="" width="30" height="30" style="font-size: 20px;">  NHL</a>
+    <div class = "ms-auto" style="color: white; font-size: 20px;">
+      <span id="date" style="padding-right: 20px;"></span>
+      <span id="time" style="padding-right: 20px;"></span>
+    </div>
   </nav>
   
 </head>
