--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="utf-8">
   <meta http-equiv="refresh" content="60"/>
-  <title>NHL</title>
+  <title>MLB Scoreboard</title>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="script.js"></script>
   <script src="lib/moment/moment.min.js"></script>
