--- a/nhlindex.html
+++ b/nhlindex.html
@@ -20,7 +20,7 @@
                 <img src="Images/puck.png" alt="" width="30" height="30" style="font-size: 20px;">  NHL</a>
     <div class = "ms-auto" style="color: white; font-size: 20px;">
       <span id="date" style="padding-right: 20px;"></span>
-      <span id="time" style="padding-right: 20px;"></span>
+      <span id="time"></span>
     </div>
   </nav>
   
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-      <div class="footer">2023 MLB Advanced Media, L.P. Use of any content on this page acknowledges agreement to the terms posted <a href="http://gdx.mlb.com/components/copyright.txt">here.</a> NHL and the NHL Shield are registered trademarks of the National Hockey League. © NHL 2023. All Rights Reserved. Baseball icon created by Good Ware - Flaticon. Puck icon created by prettycons - Flaticon.</div>
+      <div class="footer"><span id="year"></span> MLB Advanced Media, L.P. Use of any content on this page acknowledges agreement to the terms posted <a href="http://gdx.mlb.com/components/copyright.txt">here.</a> NHL and the NHL Shield are registered trademarks of the National Hockey League. © NHL. All Rights Reserved. Baseball icon created by Good Ware - Flaticon. Puck icon created by prettycons - Flaticon.</div>
     </div> 
 
 </body>
