--- a/mlbindex.html
+++ b/mlbindex.html
@@ -4,17 +4,17 @@
 
   <meta charset="utf-8">
   <meta http-equiv="refresh" content="60"/>
-  <title>NHL Scoreboard</title>
+  <title>MLB Scoreboard</title>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  <script src="nhlscript.js"></script>
+  <script src="mlbscript.js"></script>
   <script src="lib/moment/moment.min.js"></script>
-  <link rel="stylesheet" href="./nhlstyle.css"> 
+  <link rel="stylesheet" href="./mlbstyle.css"> 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand abs" href="index.html" style="font-size: 20px;">Today in Sports</a>
-          <a class="nav-link active" href="mlbindex.html" style="font-size: 20px; color: white;">
+        <a class="navbar-brand abs" href="index.html" style="font-size: 20px;">Today in Sports</a>
+        <a class="nav-link active" href="mlbindex.html" style="font-size: 20px; color: white;">
                 <img src="Images/baseball.png" alt="" width="30" height="30">  MLB</a>
             <a class="nav-link active" href="nhlindex.html" style="font-size: 20px;  color: white; padding-left: 20px;">
                 <img src="Images/puck.png" alt="" width="30" height="30" style="font-size: 20px;">  NHL</a>
@@ -34,27 +34,27 @@
           <div id="active-games"></div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top" src="Images/easternLogo.png" alt="Card image cap">
+              <img class="card-img-top-wide" src="Images/nlLogo.png" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text" style="font-size: 20px; font-weight:500;">Eastern Conference</p>
+                <p class="card-text" style="font-size: 20px; font-weight:500;">National League</p>
               </div>
               <div id="games-list1"></div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top" src="Images/westernLogo.png" alt="Card image cap">
+              <img class="card-img-top-wide" src="Images/alLogo.png" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text">Western Conference</p>
+                <p class="card-text">American League</p>
               </div>
               <div id="games-list2"></div>
             </div>
           </div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top-wide" src="Images/icLogo.png" alt="Card image cap">
+              <img class="card-img-top-wide" src="Images/ilLogo.gif" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text" style="font-size: 20px; font-weight:500;">Interconference</p>
+                <p class="card-text" style="font-size: 20px; font-weight:500;">Interleague</p>
               </div>
               <div id="games-list3"></div>
             </div>
@@ -62,9 +62,10 @@
         </div>
       </div>
       <div class="footer"><span id="year"></span> MLB Advanced Media, L.P. Use of any content on this page acknowledges agreement to the terms posted <a href="http://gdx.mlb.com/components/copyright.txt">here.</a> NHL and the NHL Shield are registered trademarks of the National Hockey League. © NHL. All Rights Reserved. Baseball icon created by Good Ware - Flaticon. Puck icon created by prettycons - Flaticon.<br><br>
-        <b>Designed by Matt McKeever</b>
-        </div>    
-      </div> 
+      <b>Designed by Matt McKeever</b>
+      </div>
+    </div> 
+
 </body>
 
 </html>
