Fixed home page logos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="col">
             <div class="card" style="width: 25rem;">
               <a href="mlbindex.html" class="custom-card">
-              <img class="card-img-top-wide" src="Images/nlLogo.png" alt="Card image cap">
+              <img class="card-img-top" src="Images/mlbLogo.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text" style="font-size: 20px; font-weight:500;">MLB</p>
               </div>
@@ -46,7 +46,7 @@
           <div class="col">
             <div class="card" style="width: 25rem;">
               <a href="nhlindex.html" class="custom-card">
-              <img class="card-img-top-wide" src="Images/alLogo.png" alt="Card image cap">
+              <img class="card-img-top-wide" src="Images/icLogo.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text">NHL</p>
               </div>
