--- a/nhlindex.html
+++ b/nhlindex.html
@@ -30,7 +30,9 @@
   <div class="bg-light">
     <div class="container">
         <div class="row justify-content-center" align="center">
-          <h7 style="font-size: 14px; padding-top: 25px;"><i>Scores last updated <span id="seconds"></span> seconds ago</i></h7>
+          <h1 style="padding-top: 25px";>Welcome to <span style="color: #0062CC">Today in Sports</span></h1>
+          <h5>Your home for up-to-the-minute sports scores</h5>
+          <h7 style="font-size: 14px;"><i>Scores last updated <span id="seconds"></span> seconds ago</i></h7>
           <div id="active-games"></div>
           <div class="col">
             <div class="card" style="width: 25rem;">
@@ -52,7 +54,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top-wide" src="Images/icLogo.png" alt="Card image cap">
+              <img class="card-img-top-wide" src="Images/nhlLogo.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text" style="font-size: 20px; font-weight:500;">Interconference</p>
               </div>
