--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         <a class="navbar-brand abs" href="index.html" style="font-size: 20px; font-weight: 650; padding-right: 20px;">Today in Sports</a>
         <a class="nav-link active" href="mlbindex.html" style="font-size: 20px; color: white; padding-right: 15px;">MLB</a>
         <div class="vr" style="height: 40px; width: 1px; color: white; opacity: 100%; margin-right: 15px;"></div>
-            <a class="nav-link active" href="nhlindex.html" style="font-size: 20px; color: white; padding-right: 15px;">NHL</a>
+        <a class="nav-link active" href="nhlindex.html" style="font-size: 20px; color: white; padding-right: 15px;">NHL</a>
+        <div class="vr" style="height: 40px; width: 1px; color: white; opacity: 100%; margin-right: 15px;"></div>
+        <a class="nav-link active" href="" style="font-size: 20px; color: white; padding-right: 15px;">NFL</a>
     <div class = "ms-auto" style="color: white; font-size: 20px;">
       <span id="time" style="font-weight: 650";></span>
+    </div>
     </div>
   </nav>
   
@@ -51,6 +54,16 @@
               <img class="card-img-top-wide" src="Images/icLogo.png" alt="Card image cap">
               <div class="card-body">
                 <p class="card-text">NHL</p>
+              </div>
+            </a>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 25rem;">
+              <a href="" class="custom-card">
+              <img class="card-img-top-wide" src="Images/nflLogo.gif" alt="Card image cap">
+              <div class="card-body">
+                <p class="card-text">NFL</p>
               </div>
             </a>
             </div>
