--- a/nhlindex.html
+++ b/nhlindex.html
@@ -20,9 +20,12 @@
         <a class="navbar-brand abs" href="index.html" style="font-size: 20px; font-weight: 650; padding-right: 20px;">Today in Sports</a>
         <a class="nav-link active" href="mlbindex.html" style="font-size: 20px; color: white; padding-right: 15px;">MLB</a>
         <div class="vr" style="height: 40px; width: 1px; color: white; opacity: 100%; margin-right: 15px;"></div>
-            <a class="nav-link active" href="nhlindex.html" style="font-size: 20px; color: white; padding-right: 15px;">NHL</a>
+        <a class="nav-link active" href="nhlindex.html" style="font-size: 20px; color: white; padding-right: 15px;">NHL</a>
+        <div class="vr" style="height: 40px; width: 1px; color: white; opacity: 100%; margin-right: 15px;"></div>
+        <a class="nav-link active" href="" style="font-size: 20px; color: white; padding-right: 15px;">NFL</a>
     <div class = "ms-auto" style="color: white; font-size: 20px;">
       <span id="time" style="font-weight: 650";></span>
+    </div>
     </div>
   </nav>
   
