--- a/mlbindex.html
+++ b/mlbindex.html
@@ -12,21 +12,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="mlbscript.js"></script>
   <script src="lib/moment/moment.min.js"></script>
-  <link rel="stylesheet" href="./mlbstyle.css"> 
+  <link rel="stylesheet" href="./scorestyle.css"> 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand abs" href="index.html" style="font-size: 20px; font-weight: 650; padding-right: 20px;">Today in Sports</a>
-        <a class="nav-link active" href="mlbindex.html" style="font-size: 20px; color: white; padding-right: 15px;">MLB</a>
-        <div class="vr" style="height: 40px; width: 1px; color: white; opacity: 100%; margin-right: 15px;"></div>
-        <a class="nav-link active" href="nhlindex.html" style="font-size: 20px; color: white; padding-right: 15px;">NHL</a>
-        <div class="vr" style="height: 40px; width: 1px; color: white; opacity: 100%; margin-right: 15px;"></div>
-        <a class="nav-link active" href="" style="font-size: 20px; color: white; padding-right: 15px;">NFL</a>
-    <div class = "ms-auto" style="color: white; font-size: 20px;">
-      <span id="time" style="font-weight: 650";></span>
-    </div>
-    </div>
+  <nav class="navbar navbar-expand-lg navbar-dark justify-content-center">
+    <a class="navbar-brand abs me-auto" href="index.html" style="font-size: 20px; font-weight: 400; padding-left: 20px; padding-right: 20px;">Today in Sports</a>
+    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px" href="mlbindex.html">MLB</a>
+    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px" href="nhlindex.html">NHL</a>
+    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">NFL</a>
+    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">NBA</a>
+    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">WNBA</a>
+    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">MLS</a>
+    <span id="time" style="font-size: 20px; font-weight: 400; padding-left: 20px; padding-right: 20px; color: white";></span>
   </nav>
   
 </head>
@@ -68,7 +65,7 @@
           </div>
         </div>
       </div>
-      <div class="footer"><span id="year"></span> MLB Advanced Media, L.P. Use of any content on this page acknowledges agreement to the terms posted <a href="http://gdx.mlb.com/components/copyright.txt">here.</a><br>NHL and the NHL Shield are registered trademarks of the National Hockey League. © 2023 NHL. All Rights Reserved.<br><br>
+      <div class="footer"><span id="year"></span> MLB Advanced Media, L.P. Use of any content on this page acknowledges agreement to the terms posted <a href="http://gdx.mlb.com/components/copyright.txt">here</a>.<br>NHL and the NHL Shield are registered trademarks of the National Hockey League. © 2023 NHL. All Rights Reserved.<br><br>
         <b>Designed by Matt McKeever</b>
       </div>
     </div> 
