--- a/nhlindex.html
+++ b/nhlindex.html
@@ -18,12 +18,11 @@
   <nav class="navbar navbar-expand-lg navbar-dark justify-content-center">
     <a class="navbar-brand abs me-auto" href="index.html" style="font-size: 20px; font-weight: 400; padding-left: 20px; padding-right: 20px;">Today in Sports</a>
     <a class="btn btn-outline-light btn-sm" style="margin-right: 15px" href="mlbindex.html">MLB</a>
-    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px" href="nhlindex.html">NHL</a>
+    <a class="btn btn-outline-light btn-sm active" style="margin-right: 15px" href="nhlindex.html">NHL</a>
     <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">NFL</a>
     <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">NBA</a>
     <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">WNBA</a>
     <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">MLS</a>
-    <span id="time" style="font-size: 20px; font-weight: 400; padding-left: 20px; padding-right: 20px; color: white";></span>
   </nav>
   
 </head>
@@ -34,7 +33,7 @@
         <div class="row justify-content-center" align="center">
           <h1 style="padding-top: 25px";>Welcome to <span style="color: #007bff">Today in Sports</span></h1>
           <h6>Up-to-the-minute scores for <span id="date"></span></h6>
-          <h7 style="font-size: 14px;"><i>Scores last updated <span id="seconds"></span> seconds ago</i></h7>
+          <h7 style="font-size: 14px;"><i>Scores last updated at <span id="time"></span></i></h7>
           <div id="active-games"></div>
           <div class="col">
             <div class="card" style="width: 25rem;">
