Consolidated repeated code

--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
     <a class="navbar-brand abs me-auto" href="index.html" style="font-size: 20px; font-weight: 400; padding-left: 20px; padding-right: 20px;">Today in Sports</a>
     <a class="btn btn-outline-light btn-sm" style="margin-right: 15px" href="mlbindex.html">MLB</a>
     <a class="btn btn-outline-light btn-sm" style="margin-right: 15px" href="nhlindex.html">NHL</a>
-    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">NFL</a>
-    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">NBA</a>
-    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">WNBA</a>
-    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">MLS</a>
+    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px"; href="nbaindex.html">NBA</a>
+    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px"; href="nflindex.html">NFL</a>
   </nav>
   
 </head>
@@ -34,62 +32,42 @@
           <h1 style="padding-top: 25px";>Welcome to <span style="color: #007bff">Today in Sports</span></h1>
           <h6>Up-to-the-minute scores for <span id="date"></span></h6>
           <h7 style="font-size: 14px;"><i>Scores last updated at <span id="time"></span></i></h7>
-          <div class="col">
-            <div class="card" style="width: 25rem;">
+          <div class="col-md-3">
+            <div class="card" style="width: 19rem;">
               <a href="mlbindex.html" class="custom-card">
-              <img class="card-img-top" src="Images/mlbLogo.png" alt="Card image cap">
+              <img class="card-img-top-wide" src="Images/mlbLogo.png">
               <div class="card-body">
                 <p class="card-text" style="font-size: 20px; font-weight:500;">MLB</p>
               </div>
             </a>
           </div>
           </div>
-          <div class="col">
-            <div class="card" style="width: 25rem;">
+          <div class="col-md-3">
+            <div class="card" style="width: 19rem;">
               <a href="nhlindex.html" class="custom-card">
-              <img class="card-img-top-wide" src="Images/icLogo.png" alt="Card image cap">
+              <img class="card-img-top-wide" src="Images/icLogo.png">
               <div class="card-body">
                 <p class="card-text">NHL</p>
               </div>
             </a>
             </div>
           </div>
-          <div class="col">
-            <div class="card" style="width: 25rem;">
-              <a href="" class="custom-card">
-              <img class="card-img-top-wide" src="Images/nflLogo.gif" alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">NFL</p>
-              </div>
-            </a>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card" style="width: 25rem;">
-              <a href="" class="custom-card">
-              <img class="card-img-top-wide" src="Images/nbaLogo.png" alt="Card image cap">
+          <div class="col-md-3">
+            <div class="card" style="width: 19rem;">
+              <a href="nbaindex.html" class="custom-card">
+              <img class="card-img-top-wide" src="Images/nbaLogo.png">
               <div class="card-body">
                 <p class="card-text">NBA</p>
               </div>
             </a>
             </div>
           </div>
-          <div class="col">
-            <div class="card" style="width: 25rem;">
-              <a href="" class="custom-card">
-              <img class="card-img-top-wide" src="Images/wnbaLogo.png" alt="Card image cap">
+          <div class="col-md-3">
+            <div class="card" style="width: 19rem;">
+              <a href="nflindex.html" class="custom-card">
+              <img class="card-img-top-wide" src="Images/nflLogo.gif">
               <div class="card-body">
-                <p class="card-text">WNBA</p>
-              </div>
-            </a>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card" style="width: 25rem;">
-              <a href="" class="custom-card">
-              <img class="card-img-top-wide" src="Images/mlsLogo.png" alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">MLS</p>
+                <p class="card-text">NFL</p>
               </div>
             </a>
             </div>
