--- a/mlbindex.html
+++ b/mlbindex.html
@@ -9,25 +9,24 @@
   <meta charset="utf-8">
   <meta http-equiv="refresh" content="60"/>
   <title>MLB Scoreboard</title>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
   <script src="mlbscript.js"></script>
   <script src="lib/moment/moment.min.js"></script>
-  <link rel="stylesheet" href="./scorestyle.css"> 
+  <link rel="stylesheet" href="./style.css"> 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
   <nav class="navbar navbar-expand-lg navbar-dark justify-content-center">
     <a class="navbar-brand abs me-auto" href="index.html" style="font-size: 20px; font-weight: 400; padding-left: 20px; padding-right: 20px;">Today in Sports</a>
     <a class="btn btn-outline-light btn-sm active" style="margin-right: 15px" href="mlbindex.html">MLB</a>
     <a class="btn btn-outline-light btn-sm" style="margin-right: 15px" href="nhlindex.html">NHL</a>
-    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">NFL</a>
-    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">NBA</a>
-    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">WNBA</a>
-    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px";href="">MLS</a>
+    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px"; href="nbaindex.html">NBA</a>
+    <a class="btn btn-outline-light btn-sm" style="margin-right: 15px"; href="nflindex.html">NFL</a>
   </nav>
   
 </head>
 
 <body>
+  
   <div class="bg-light">
     <div class="container">
         <div class="row justify-content-center" align="center">
@@ -39,7 +38,7 @@
             <div class="card" style="width: 25rem;">
               <img class="card-img-top-wide" src="Images/nlLogo.png" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text" style="font-size: 20px; font-weight:500;">National League</p>
+                <p class="card-text">American League</p>
               </div>
               <div id="games-list1"></div>
             </div>
@@ -48,7 +47,7 @@
             <div class="card" style="width: 25rem;">
               <img class="card-img-top-wide" src="Images/alLogo.png" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text">American League</p>
+                <p class="card-text">National League</p>
               </div>
               <div id="games-list2"></div>
             </div>
@@ -57,7 +56,7 @@
             <div class="card" style="width: 25rem;">
               <img class="card-img-top-wide" src="Images/ilLogo.gif" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text" style="font-size: 20px; font-weight:500;">Interleague</p>
+                <p class="card-text">Interleague</p>
               </div>
               <div id="games-list3"></div>
             </div>
