--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="col-md-3">
             <div class="card" style="width: 19rem;">
               <a href="mlbindex.html" class="custom-card">
-              <img class="card-img-top-wide" src="Images/mlbLogo.png">
+              <img class="card-img-top" style="padding-left: 80px; padding-right: 80px;" src="Images/mlbLogo.png">
               <div class="card-body">
                 <p class="card-text" style="font-size: 20px; font-weight:500;">MLB</p>
               </div>
@@ -45,7 +45,7 @@
           <div class="col-md-3">
             <div class="card" style="width: 19rem;">
               <a href="nhlindex.html" class="custom-card">
-              <img class="card-img-top-wide" src="Images/icLogo.png">
+              <img class="card-img-top" src="Images/icLogo.png">
               <div class="card-body">
                 <p class="card-text">NHL</p>
               </div>
@@ -55,7 +55,7 @@
           <div class="col-md-3">
             <div class="card" style="width: 19rem;">
               <a href="nbaindex.html" class="custom-card">
-              <img class="card-img-top-wide" src="Images/nbaLogo.png">
+              <img class="card-img-top" style="padding-left: 125px; padding-right: 125px;"src="Images/nbaLogo.png">
               <div class="card-body">
                 <p class="card-text">NBA</p>
               </div>
@@ -65,7 +65,7 @@
           <div class="col-md-3">
             <div class="card" style="width: 19rem;">
               <a href="nflindex.html" class="custom-card">
-              <img class="card-img-top-wide" src="Images/nflLogo.gif">
+              <img class="card-img-top" style="padding-left: 110px; padding-right: 110px;"src="Images/nflLogo.gif">
               <div class="card-body">
                 <p class="card-text">NFL</p>
               </div>
