--- a/mlbindex.html
+++ b/mlbindex.html
@@ -36,7 +36,7 @@
           <div id="active-games"></div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top-wide" src="Images/nlLogo.png" alt="Card image cap">
+              <img class="card-img-top" style="padding-left: 150px; padding-right: 150px;" src="Images/nlLogo.png">
               <div class="card-body">
                 <p class="card-text">American League</p>
               </div>
@@ -45,7 +45,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top-wide" src="Images/alLogo.png" alt="Card image cap">
+              <img class="card-img-top" style="padding-left: 150px; padding-right: 150px;" src="Images/alLogo.png">
               <div class="card-body">
                 <p class="card-text">National League</p>
               </div>
@@ -54,7 +54,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top-wide" src="Images/ilLogo.gif" alt="Card image cap">
+              <img class="card-img-top" style="padding-left: 150px; padding-right: 150px;" src="Images/ilLogo.gif">
               <div class="card-body">
                 <p class="card-text">Interleague</p>
               </div>
