--- a/nbaindex.html
+++ b/nbaindex.html
@@ -36,7 +36,7 @@
           <div id="active-games"></div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top-wide" src="Images/nlLogo.png" alt="Card image cap">
+              <img class="card-img-top" style="padding-left: 150px; padding-right: 150px;" src="Images/nbaeast.gif">
               <div class="card-body">
                 <p class="card-text">Eastern Conference</p>
               </div>
@@ -45,7 +45,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top-wide" src="Images/alLogo.png" alt="Card image cap">
+              <img class="card-img-top" style="padding-left: 150px; padding-right: 150px;" src="Images/nbawest.gif">
               <div class="card-body">
                 <p class="card-text">Western Conference</p>
               </div>
@@ -54,7 +54,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top-wide" src="Images/ilLogo.gif" alt="Card image cap">
+              <img class="card-img-top" style="padding-left: 150px; padding-right: 150px;" src="Images/nbaic.jpg">
               <div class="card-body">
                 <p class="card-text">Interconference</p>
               </div>
