--- a/nhlindex.html
+++ b/nhlindex.html
@@ -35,7 +35,7 @@
           <div id="active-games"></div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top" src="Images/easternLogo.png" alt="Card image cap">
+              <img class="card-img-top" style="padding-left: 125px; padding-right: 125px;" src="Images/easternLogo.png">
               <div class="card-body">
                 <p class="card-text">Eastern Conference</p>
               </div>
@@ -44,7 +44,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top" src="Images/westernLogo.png" alt="Card image cap">
+              <img class="card-img-top" style="padding-left: 125px; padding-right: 125px;" src="Images/westernLogo.png">
               <div class="card-body">
                 <p class="card-text">Western Conference</p>
               </div>
@@ -53,7 +53,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top-wide" src="Images/nhlLogo.png" alt="Card image cap">
+              <img class="card-img-top" style="padding-left: 150px; padding-right: 150px;" src="Images/nhlLogo.png">
               <div class="card-body">
                 <p class="card-text">Interconference</p>
               </div>
